--- a/projekt.html
+++ b/projekt.html
@@ -9,7 +9,7 @@
     <script>
         // Google API Client Library betöltése és inicializálása
         function loadClient() {
-            gapi.client.setApiKey('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');
+            gapi.client.setApiKey('');
             return gapi.client.load('https://sheets.googleapis.com/$discovery/rest?version=v4')
                 .then(function() { 
                     console.log('GAPI client loaded for API'); 
