--- a/projekt.html
+++ b/projekt.html
@@ -3,6 +3,7 @@
 <head>
     <title>Google Sheets Project Progress</title>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/10.4.0/jsrsasign-all-min.js"></script>
 </head>
 <body>
     <div id="content"></div>
