favicon, description, embed color

--- a/all-item-project/index.html
+++ b/all-item-project/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>luckeY all item projektje</title>
+        <title>luckeY - All Item Projekt</title>
+        <meta name="description" content="Ezen az oldalon láthatod, hogy az All Item Projekt hol tart.">
+        <meta name="theme-color" content="#ffad3b">
+        <link rel="shortcut icon" href="https://static-cdn.jtvnw.net/jtv_user_pictures/a0e42cf1-f118-406a-94e3-ea2d2ccadeb9-profile_image-70x70.png" type="image/x-icon">
         <style>
             body {
                 padding: 0;
