--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/708012757726920784/9b9369790b50777ac23d7f602d0ebcc1.webp?size=256" type="image/x-icon">
-        <meta name="description" content="A VexSoundPause mod hivatalos letöltési oldala.">
+        <meta name="description" content="Soviaat's releases.">
         <meta name="theme-color" content="#ffad3b">
         <title>Soviaat's Mods</title>
 
