Made things more responsible, added favicon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/708012757726920784/9b9369790b50777ac23d7f602d0ebcc1.webp?size=256" type="image/x-icon">
         <meta name="description" content="Soviaat's releases.">
+        <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
         <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="styles/mods.css">
         <title>Soviaat's Mods</title>
