--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="/styles/index.css">
+        <link rel="website icon" href="favicon.png" type="image/x-icon">
         <title>Soviaat.dev | Home</title>
     </head>
     <body>
