--- a/mods/index.html
+++ b/mods/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Soviaat's releases.">
+        <meta name="description" content="Soviaat's mod releases.">
         <link rel="website icon" href="favicon.png" type="image/x-icon">
         <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="../styles/mods.css">
