Added WIP to Statify

--- a/statify/index.html
+++ b/statify/index.html
@@ -9,6 +9,7 @@
         <title>Statify</title>
     </head>
     <body>
+        <div class="work-in-progress">Work in progress</div>
         <div class="container">
             <div class="embed-container">
                 <div class="row-one">
