--- a/statify/index.html
+++ b/statify/index.html
@@ -6,6 +6,7 @@
         <meta name="theme-color" content="#ffad3b">
         <link rel="shortcut icon" href="https://static-cdn.jtvnw.net/jtv_user_pictures/a0e42cf1-f118-406a-94e3-ea2d2ccadeb9-profile_image-70x70.png" type="image/x-icon">
         <link rel="stylesheet" href="../styles/statify.css">
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
         <title>Statify</title>
     </head>
     <body>
