Added some keywords

--- a/mods/index.html
+++ b/mods/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev">
+        <meta name="author" content="Soviaat">
         <meta name="description" content="Soviaat's mod releases.">
         <link rel="website icon" href="favicon.png" type="image/x-icon">
         <meta name="theme-color" content="#ffad3b">
