--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev">
         <meta name="description" content="Yo! Check this out.">
+        <meta name="author" content="Soviaat">
         <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="/styles/index.css">
         <link rel="website icon" href="favicon.png" type="image/x-icon">
