Made it shortcut icon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
         <meta name="author" content="Soviaat">
         <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="/styles/index.css">
-        <link rel="website icon" href="favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
         <title>Soviaat.dev | Home</title>
     </head>
     <body>
