--- a/mods/index.html
+++ b/mods/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev">
         <meta name="author" content="Soviaat">
         <meta name="description" content="Soviaat's mod releases.">
-        <link rel="website icon" href="favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
         <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="../styles/mods.css">
         <title>Soviaat's Mods</title>
