--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <title>Soviaat.dev | Home</title>
     </head>
     <body>
-        <div class="links" id="linkList"></div>
+        <div class="container" id="main">
+            <div class="links" id="linkList"></div>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
