Added username textbox

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <title>Soviaat.dev | Home</title>
     </head>
     <body>
+        <h1 id="welcome">Welcome</h1>
         <div class="container" id="main">
             <div class="links" id="linkList"></div>
         </div>
