Made favicons accessible

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="theme-color" content="#ffad3b">
         <link rel="stylesheet" href="/styles/index.css">
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+        <link rel="icon" href="favicon.png" type="image/x-icon">
         <title>Soviaat.dev | Home</title>
     </head>
     <body>
