Statify Homepage Test

--- a/statify/index.html
+++ b/statify/index.html
@@ -4,30 +4,115 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#ffad3b">
+        <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev, minecraft statistics mod, minecraft, Minecraft, Statistics Mod for minecraft">
         <link rel="stylesheet" href="../styles/statify.css">
+        <script src="/js/statify.js"></script>
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
         <title>Statify</title>
     </head>
     <body>
-        <div class="work-in-progress">Work in progress</div>
-        <div class="container">
-            <div class="embed-container">
-                <div class="row-one">
-                    <iframe class="wheel blocks-placed" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1538698103&amp;format=image"></iframe>
-                    <iframe class="wheel blocks-mined" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=442630163&amp;format=image"></iframe>
-                    <iframe class="wheel items-crafted" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=593632201&amp;format=image"></iframe>
+        <div class="navbar">
+            <div class="menu-icon mobile"></div>
+            <div class="navigation">
+                <ul>
+                    <li>Home</li>
+                    <li>Download</li>
+                    <li>Help</li>
+                </ul>
+            </div>
+        </div>
+        <div class="main-container">
+            <div class="header">
+                <div class="title">
+                    Statify
+                    <div class="description">
+                        Let's bring you into a new world of statistics.
+                    </div>
                 </div>
-                <div class="row-two">
-                    <iframe class="wheel tools-broken" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=161041247&amp;format=image"></iframe>
-                    <iframe class="wheel foods-eaten" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1216840618&amp;format=image"></iframe>
-                    <iframe class="wheel distance-travelled" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=998966792&amp;format=image"></iframe>
+                <div class="img-container">
+                    <img src="header.gif" alt="">
                 </div>
-                <div class="row-three">
-                    <iframe class="wheel workstations" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=481609164&amp;format=image"></iframe>
-                    <iframe class="wheel mobs-killed" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1736625042&amp;format=image"></iframe>
-                    <iframe class="wheel items-picked-up"width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1772349486&amp;format=image"></iframe>
+                <div class="introduction-title">
+                    <h1>So, what is Statify?</h1>
                 </div>
-                <iframe class="wheel items-dropped" width="606" height="376" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1856209158&amp;format=image"></iframe>
+            </div>
+            <div class="main">
+                <div class="introduction-container">
+                    <div class="introduction-description">
+                        <p>Statify basically lets you visualize your in-game statistics inside a Google Spreadsheet. It provides Pie Charts of important stats and some not so important (silly) stats.</p>
+                        <p>This mod uploads your statistics into your Google Spreadsheets every 2 minutes.</p>
+                        <div class="excel-table">
+                            <div class="header-row">
+                                <div class="cell cell-header corner"></div>
+                                <div class="cell cell-header">A</div>
+                                <div class="cell cell-header">B</div>
+                                <div class="cell cell-header">C</div>
+                            </div>
+                            <div class="row">
+                                <div class="cell cell-header">1</div>
+                                <div class="cell">custom</div>
+                                <div class="cell">minecraft:interact_with_crafting_table</div>
+                                <div class="cell">5659</div>
+                            </div>
+                            <div class="row">
+                                <div class="cell cell-header">2</div>
+                                <div class="cell">custom</div>
+                                <div class="cell">minecraft:play_time</div>
+                                <div class="cell">93521803</div>
+                            </div>
+                            <div class="row">
+                                <div class="cell cell-header">3</div>
+                                <div class="cell">custom</div>
+                                <div class="cell">minecraft:damage_resisted</div>
+                                <div class="cell">752</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider-wrapper">
+                        <div class="slider">
+                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=161041247&format=image" alt="" id="slide-1" />
+                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=998966792&format=image" alt="" id="slide-2" />
+                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1736625042&format=image" alt="" id="slide-3" />
+                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1538698103&format=image" alt="" id="slide-4" />
+                        </div>
+                        <div class="slider-nav">
+                            <a href="#slide-1"></a>
+                            <a href="#slide-2"></a>
+                            <a href="#slide-3"></a>
+                            <a href="#slide-4"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="compatibility-container">
+                    <div class="compatibility-title">
+                        <h2>And what mods are needed for Statify?</h2>
+                    </div>
+                    <div class="compatibility-description">
+                        <p>Currently the mod is only compatible with <code id="fabric">Fabric API</code> and its Loader. I didn't plan to make a Forge version, but if there is enough demand for it, then I'll think about it.</p>
+
+                        <p>The required Fabric versions for the current release of Statify are:</p>
+
+                        <div class="excel-table">
+                            <div class="header-row">
+                                <div class="cell cell-header">Name</div>
+                                <div class="cell cell-header">Version</div>
+                            </div>
+                            <div class="row">
+                                <div class="cell cell-header">
+                                    <codelink id="fabric-download">Fabric API</codelink>
+                                </div>
+                                <div class="cell">0.107.0+1.21.3</div>
+                            </div>
+                            <div class="row">
+                                <div class="cell cell-header">
+                                    <codelink id="fabric-loader-download">Fabric Loader</codelink>
+                                </div>
+                                <div class="cell">0.16.9</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
