Added a lower resolution header

--- a/statify/index.html
+++ b/statify/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="img-container">
-                    <img src="/styles/header.gif" alt="">
+                    <img src="/styles/header-lowres.gif" alt="">
                 </div>
                 <div class="introduction-title">
                     <h1>So, what is Statify?</h1>
