Two-third of navbar got some purpose

--- a/statify/index.html
+++ b/statify/index.html
@@ -11,6 +11,7 @@
         <title>Statify</title>
     </head>
     <body>
+        <div class="top"></div>
         <div id="cookie-popup" class="cookie-popup">
             <p>We use cookies to improve your experience on this website. By visiting this site, you automatically accept our use of cookies.</p>
             <button id="close-cookie-popup">Got it!</button>
@@ -19,8 +20,8 @@
             <div class="menu-icon mobile"></div>
             <div class="navigation">
                 <ul>
-                    <li>Home</li>
-                    <li>Download</li>
+                    <li class="home-link">Home</li>
+                    <li class="download-link">Download</li>
                     <li>Help</li>
                 </ul>
             </div>
