--- a/statify/index.html
+++ b/statify/index.html
@@ -4,126 +4,138 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#ffad3b">
+        <meta name="description" content="Let's bring you into a new world of statistic visualization.">
+        <meta name="author" content="Soviaat">
+        <meta name="theme-color" content="#2690ec">
+        <meta name="image" src="./statify-logo.png">
         <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev, minecraft statistics mod, minecraft, Minecraft, Statistics Mod for minecraft">
         <link rel="stylesheet" href="../styles/statify.css">
         <script src="/js/statify.js"></script>
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-        <title>Statify</title>
+        <title>Statify | Minecraft Mod</title>
     </head>
     <body>
-        <div class="top"></div>
-        <div id="cookie-popup" class="cookie-popup">
-            <p>We use cookies to improve your experience on this website. By visiting this site, you automatically accept our use of cookies.</p>
-            <button id="close-cookie-popup">Got it!</button>
-        </div>
-        <div class="navbar">
-            <div class="menu-icon mobile"></div>
-            <div class="navigation">
-                <ul>
-                    <li class="home-link">Home</li>
-                    <li class="download-link">Download</li>
-                    <li>Help</li>
-                </ul>
-            </div>
-        </div>
-        <div class="main-container">
-            <div class="header">
-                <div class="title">
-                    <h1>Statify</h1>
-                    <div class="description">
-                        Let's bring you into a new world of statistics.
-                    </div>
-                    <div class="install">Download now!</div>
-                </div>
-                <div class="img-container">
-                    <img src="/styles/header-lowres.gif" alt="">
-                </div>
-                <div class="introduction-title">
-                    <h1>So, what is Statify?</h1>
+        <div class="loading-container">
+            <div class="loading">
+                <div class="loading-bar">
+                    Loading:&nbsp;<span id="percent">0%</span>
                 </div>
             </div>
-            <div class="main">
-                <div class="introduction-container">
-                    <div class="introduction-description">
-                        <p>Statify basically lets you visualize your in-game statistics inside a Google Spreadsheet. It provides Pie Charts of important stats and some not so important (silly) stats.</p>
-                        <p>This mod uploads your statistics into your Google Spreadsheets every 2 minutes.</p>
+        </div>
+        <div class="main-body">
+            <div class="top"></div>
+            <div id="cookie-popup" class="cookie-popup">
+                <p>We use cookies to improve your experience on this website. By visiting this site, you automatically accept our use of cookies.</p>
+                <button id="close-cookie-popup">Got it!</button>
+            </div>
+            <div class="navbar">
+                <div class="menu-icon mobile"></div>
+                <div class="navigation">
+                    <ul>
+                        <li class="home-link">Home</li>
+                        <li class="download-link">Download</li>
+                        <li>Help</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="main-container">
+                <div class="header">
+                    <div class="title">
+                        <h1>Statify</h1>
+                        <div class="description">
+                            Let's bring you into a new world of statistics.
+                        </div>
+                        <div class="install">Download now!</div>
                     </div>
-                    <!-- <div class="intro-table">
-                        <div class="excel-table">
-                            <div class="header-row">
-                                <div class="cell cell-header corner"></div>
-                                <div class="cell cell-header">A</div>
-                                <div class="cell cell-header">B</div>
-                                <div class="cell cell-header">C</div>
-                            </div>
-                            <div class="row">
-                                <div class="cell cell-header">1</div>
-                                <div class="cell">custom</div>
-                                <div class="cell">minecraft:interact_with_crafting_table</div>
-                                <div class="cell">5659</div>
-                            </div>
-                            <div class="row">
-                                <div class="cell cell-header">2</div>
-                                <div class="cell">custom</div>
-                                <div class="cell">minecraft:play_time</div>
-                                <div class="cell">93521803</div>
-                            </div>
-                            <div class="row">
-                                <div class="cell cell-header">3</div>
-                                <div class="cell">custom</div>
-                                <div class="cell">minecraft:damage_resisted</div>
-                                <div class="cell">752</div>
-                            </div>
-                        </div>
-                    </div> -->
-
-                    <div class="slider-wrapper">
-                        <div class="slider">
-                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=161041247&format=image" alt="" id="slide-1" />
-                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=998966792&format=image" alt="" id="slide-2" />
-                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1736625042&format=image" alt="" id="slide-3" />
-                            <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1538698103&format=image" alt="" id="slide-4" />
-                        </div>
-                        <br>
-                        Charts from <codelink id="luckey">luckeY's</codelink> Statify spreadsheet.
+                    <div class="img-container">
+                        <img src="/styles/header-lowres.gif" alt="">
+                    </div>
+                    <div class="introduction-title">
+                        <h1>So, what is Statify?</h1>
                     </div>
                 </div>
-                <div class="compatibility-container">
-                    <div class="compatibility-title">
-                        <h2>What mods are needed for Statify?</h2>
-                    </div>
-                    <div class="compatibility-description">
-                        <p>Currently the mod is only compatible with <code id="fabric">Fabric API</code> and its Loader. I didn't plan to make a Forge version, but if there is enough demand for it, then I'll think about it.</p>
-                        
-                        <div class="version-req">
-                            <p>The required Fabric versions for the current release of Statify are:</p>
+                <div class="main">
+                    <div class="introduction-container">
+                        <div class="introduction-description">
+                            <p>Statify basically lets you visualize your in-game statistics inside a Google Spreadsheet. It provides Pie Charts of important stats and some not so important (silly) stats.</p>
+                            <p>This mod uploads your statistics into your Google Spreadsheets every 2 minutes.</p>
+                        </div>
+                        <!-- <div class="intro-table">
                             <div class="excel-table">
                                 <div class="header-row">
-                                    <div class="cell cell-header">Name</div>
-                                    <div class="cell cell-header">Version</div>
+                                    <div class="cell cell-header corner"></div>
+                                    <div class="cell cell-header">A</div>
+                                    <div class="cell cell-header">B</div>
+                                    <div class="cell cell-header">C</div>
                                 </div>
                                 <div class="row">
-                                    <div class="cell cell-header">
-                                        <codelink id="fabric-download">Fabric API</codelink>
-                                    </div>
-                                    <div class="cell">0.107.0+1.21.3</div>
+                                    <div class="cell cell-header">1</div>
+                                    <div class="cell">custom</div>
+                                    <div class="cell">minecraft:interact_with_crafting_table</div>
+                                    <div class="cell">5659</div>
                                 </div>
                                 <div class="row">
-                                    <div class="cell cell-header">
-                                        <codelink id="fabric-loader-download">Fabric Loader</codelink>
+                                    <div class="cell cell-header">2</div>
+                                    <div class="cell">custom</div>
+                                    <div class="cell">minecraft:play_time</div>
+                                    <div class="cell">93521803</div>
+                                </div>
+                                <div class="row">
+                                    <div class="cell cell-header">3</div>
+                                    <div class="cell">custom</div>
+                                    <div class="cell">minecraft:damage_resisted</div>
+                                    <div class="cell">752</div>
+                                </div>
+                            </div>
+                        </div> -->
+                        <div class="slider-wrapper">
+                            <div class="slider">
+                                <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=161041247&format=image" alt="" id="slide-1" />
+                                <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=998966792&format=image" alt="" id="slide-2" />
+                                <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1736625042&format=image" alt="" id="slide-3" />
+                                <img src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5tQLkw0rWLdAY_OQOZr9uaqsecJUQydBfQU5n-bk5EUOT6dFE8dZ4EqGE_v3bUPn201WD5jECeRjj/pubchart?oid=1538698103&format=image" alt="" id="slide-4" />
+                            </div>
+                            <br>
+                            Charts from <codelink id="luckey">luckeY's</codelink> Statify spreadsheet.
+                        </div>
+                    </div>
+                    <div class="compatibility-container">
+                        <div class="compatibility-title">
+                            <h2>What mods are needed for Statify?</h2>
+                        </div>
+                        <div class="compatibility-description">
+                            <p>Currently the mod is only compatible with <code id="fabric">Fabric API</code> and its Loader. I didn't plan to make a Forge version, but if there is enough demand for it, then I'll think about it.</p>
+            
+                            <div class="version-req">
+                                <p>The required Fabric versions for the current release of Statify are:</p>
+                                <div class="excel-table">
+                                    <div class="header-row">
+                                        <div class="cell cell-header">Name</div>
+                                        <div class="cell cell-header">Version</div>
                                     </div>
-                                    <div class="cell">0.16.9</div>
+                                    <div class="row">
+                                        <div class="cell cell-header">
+                                            <codelink id="fabric-download">Fabric API</codelink>
+                                        </div>
+                                        <div class="cell">0.107.0+1.21.3</div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="cell cell-header">
+                                            <codelink id="fabric-loader-download">Fabric Loader</codelink>
+                                        </div>
+                                        <div class="cell">0.16.9</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="download-title">
+                            <h2>Download</h2>
+                        </div>
                     </div>
-                    <div class="download-title">
-                        <h2>Download</h2>
-                    </div>
-                </div>
-                <div class="download-container">
-                    <div class="download-description">
-                        You can download Statify from my <codelink id="statify">My website</codelink> or from the <codelink id="gitrepo">GitHub repository</codelink> under releases. 
+                    <div class="download-container">
+                        <div class="download-description">
+                            You can download Statify from my <codelink id="statify">My website</codelink> or from the <codelink id="gitrepo">GitHub repository</codelink> under releases.
+                        </div>
                     </div>
                 </div>
             </div>
