--- a/statify/index.html
+++ b/statify/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Soviaat">
         <meta name="theme-color" content="#2690ec">
         <meta name="image" src="./statify-logo.png">
+        <meta property="og:image" src="./statify-logo.png">
         <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev, minecraft statistics mod, minecraft, Minecraft, Statistics Mod for minecraft">
         <link rel="stylesheet" href="../styles/statify.css">
         <script src="/js/statify.js"></script>
@@ -34,7 +35,7 @@
                     <ul>
                         <li class="home-link">Home</li>
                         <li class="download-link">Download</li>
-                        <li>Help</li>
+                        <li class="help-link">Help</li>
                     </ul>
                 </div>
             </div>
@@ -117,7 +118,7 @@
                                         <div class="cell cell-header">
                                             <codelink id="fabric-download">Fabric API</codelink>
                                         </div>
-                                        <div class="cell">0.107.0+1.21.3</div>
+                                        <div class="cell">0.110.5+1.21.4</div>
                                     </div>
                                     <div class="row">
                                         <div class="cell cell-header">
@@ -137,6 +138,23 @@
                             You can download Statify from my <codelink id="statify">My website</codelink> or from the <codelink id="gitrepo">GitHub repository</codelink> under releases.
                         </div>
                     </div>
+                    <div class="help-container">
+                        <div class="help-title">
+                            <h2>Need help?</h2>
+                        </div>
+                    <div class="help-description" id="help">
+                        <h3>If you:</h3>
+                        <ul>
+                            <li>
+                                <p>Need any help, <code id="readme">Statify's readme</code> contains everything.</p>
+                            </li>
+                            <li>
+                                <p>Have encountered a bug, or got suggestions or questions, please <code id="git-issue">open an issue ticket on GitHub</code> with the proper labels.</p>
+                            </li>
+                        </ul>
+                        
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
