Updated meta logos

--- a/statify/index.html
+++ b/statify/index.html
@@ -7,8 +7,8 @@
         <meta name="description" content="Let's bring you into a new world of statistic visualization.">
         <meta name="author" content="Soviaat">
         <meta name="theme-color" content="#2690ec">
-        <meta name="image" src="./statify-logo.png">
-        <meta property="og:image" src="./statify-logo.png">
+        <meta name="image" src="https://soviaat.dev/statify/statify-logo.png">
+        <meta property="og:image" src="https://soviaat.dev/statify/statify-logo.png">
         <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev, minecraft statistics mod, minecraft, Minecraft, Statistics Mod for minecraft">
         <link rel="stylesheet" href="../styles/statify.css">
         <script src="/js/statify.js"></script>
