--- a/bango/terms-of-service/index.html
+++ b/bango/terms-of-service/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Terms of Service</title>
 </head>
 
 <body>
@@ -63,7 +63,7 @@
                 <div class="MsoNormal" data-custom-class="title" style="line-height: 1.5;">
                     <bdt class="block-component"><span style="font-size: 19px;"></span></bdt>
                     <bdt class="question"><strong>
-                            <h1>TERMS AND CONDITIONS</h1>
+                            <h1>TERMS OF SERVICE</h1>
                         </strong></bdt>
                     <bdt class="statement-end-if-in-editor"></bdt>
                 </div>
