Added donation option and creators to footer

--- a/statify/index.html
+++ b/statify/index.html
@@ -9,6 +9,7 @@
         <meta name="theme-color" content="#2690ec">
         <meta name="image" content="https://soviaat.dev/statify/statify-logo.png">
         <meta property="og:image" content="https://soviaat.dev/statify/statify-logo.png">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=open_in_new" />
         <meta name="keywords" content="Soviaat, Sxviaat, sxviaat, soviaat, statify, Statify, Statify mod, statify mod, minecraft statify mod, soviaatdev, minecraft statistics mod, minecraft, Minecraft, Statistics Mod for minecraft">
         <script type="module" defer>import { polyfillCountryFlagEmojis } from "https://cdn.skypack.dev/country-flag-emoji-polyfill"; polyfillCountryFlagEmojis();</script>
         <link rel="stylesheet" href="../styles/statify.css">
@@ -162,6 +163,25 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <footer>
+                <div class="support">
+                    <div class="support-link">
+                        <span data-translate-key="supportMe"></span><span class="kofi"><img src="https://storage.ko-fi.com/cdn/cup-border.png" alt=""></span>
+                    </div>
+                </div>
+                <div class="creators">
+                    <span>Mod creators:</span>
+                    <div class="creator-container">
+                        <div class="creator">Soviaat<span class="material-symbols-outlined">open_in_new</span></div>
+                        <div class="creator">Kendiii2<span class="material-symbols-outlined">open_in_new</span></div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <div class="kofi-popup">
+            <div class="popup-container">
+                <div class="close"></div>
             </div>
         </div>
         <script src="/js/lang.js"></script>
