made payment actually work, mobile compat

--- a/statify/index.html
+++ b/statify/index.html
@@ -14,6 +14,7 @@
         <script type="module" defer>import { polyfillCountryFlagEmojis } from "https://cdn.skypack.dev/country-flag-emoji-polyfill"; polyfillCountryFlagEmojis();</script>
         <link rel="stylesheet" href="../styles/statify.css">
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+        <meta http-equiv="Permissions-Policy" content="payment=(self 'https://ko-fi.com')">
         <title>Statify | Minecraft Mod</title>
     </head>
     <body>
